crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR1722_sys_exit_alias_10.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
sys_exit_alias_10.py:8:5: PLR1722 Use `sys.exit()` instead of `exit`
  |
8 | def main():
9 |     exit(0)
  |     ^^^^ PLR1722
  |
  = help: Replace `exit` with `sys.exit()`


