crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR1722_sys_exit_alias_3.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
./resources/test/fixtures/pylint/sys_exit_alias_3.py:4:1: PLR1722 [*] Use `sys.exit()` instead of `quit`
  |
4 | exit(0)
5 | quit(0)
  | ^^^^ PLR1722
  |
  = help: Replace `quit` with `sys.exit()`

ℹ Suggested fix
1 1 | from sys import exit
2 2 | 
3 3 | exit(0)
4   |-quit(0)
  4 |+exit(0)
5 5 | 
6 6 | 
7 7 | def main():

./resources/test/fixtures/pylint/sys_exit_alias_3.py:9:5: PLR1722 [*] Use `sys.exit()` instead of `quit`
   |
 9 | def main():
10 |     exit(1)
11 |     quit(1)
   |     ^^^^ PLR1722
   |
   = help: Replace `quit` with `sys.exit()`

ℹ Suggested fix
6  6  | 
7  7  | def main():
8  8  |     exit(1)
9     |-    quit(1)
   9  |+    exit(1)
10 10 | 
11 11 | 
12 12 | def main():

./resources/test/fixtures/pylint/sys_exit_alias_3.py:16:5: PLR1722 [*] Use `sys.exit()` instead of `quit`
   |
16 |     exit(1)
17 |     quit(1)
   |     ^^^^ PLR1722
   |
   = help: Replace `quit` with `sys.exit()`


