crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR1722_sys_exit_alias_5.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
sys_exit_alias_5.py:3:1: PLR1722 [*] Use `sys.exit()` instead of `exit`
  |
1 | from sys import *
2 | 
3 | exit(0)
  | ^^^^ PLR1722
4 | quit(0)
  |
  = help: Replace `exit` with `sys.exit()`

ℹ Suggested fix
1 1 | from sys import *
  2 |+import sys
2 3 | 
3   |-exit(0)
  4 |+sys.exit(0)
4 5 | quit(0)
5 6 | 
6 7 | 

sys_exit_alias_5.py:4:1: PLR1722 [*] Use `sys.exit()` instead of `quit`
  |
3 | exit(0)
4 | quit(0)
  | ^^^^ PLR1722
  |
  = help: Replace `quit` with `sys.exit()`

ℹ Suggested fix
1 1 | from sys import *
  2 |+import sys
2 3 | 
3 4 | exit(0)
4   |-quit(0)
  5 |+sys.exit(0)
5 6 | 
6 7 | 
7 8 | def main():

sys_exit_alias_5.py:8:5: PLR1722 [*] Use `sys.exit()` instead of `exit`
  |
7 | def main():
8 |     exit(1)
  |     ^^^^ PLR1722
9 |     quit(1)
  |
  = help: Replace `exit` with `sys.exit()`

ℹ Suggested fix
1  1  | from sys import *
   2  |+import sys
2  3  | 
3  4  | exit(0)
4  5  | quit(0)
5  6  | 
6  7  | 
7  8  | def main():
8     |-    exit(1)
   9  |+    sys.exit(1)
9  10 |     quit(1)

sys_exit_alias_5.py:9:5: PLR1722 [*] Use `sys.exit()` instead of `quit`
  |
7 | def main():
8 |     exit(1)
9 |     quit(1)
  |     ^^^^ PLR1722
  |
  = help: Replace `quit` with `sys.exit()`

ℹ Suggested fix
1  1  | from sys import *
   2  |+import sys
2  3  | 
3  4  | exit(0)
4  5  | quit(0)
--------------------------------------------------------------------------------
6  7  | 
7  8  | def main():
8  9  |     exit(1)
9     |-    quit(1)
   10 |+    sys.exit(1)


