crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR1722_sys_exit_alias_6.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    name: SysExitAlias
    body: "Use `sys.exit()` instead of `exit`"
    suggestion: "Replace `exit` with `sys.exit()`"
    fixable: true
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 4
  fix:
    edits:
      - content: "import sys\n"
        location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 0
      - content: sys.exit
        location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 4
  parent: ~
- kind:
    name: SysExitAlias
    body: "Use `sys.exit()` instead of `quit`"
    suggestion: "Replace `quit` with `sys.exit()`"
    fixable: true
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 4
  fix:
    edits:
      - content: "import sys\n"
        location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 0
      - content: sys.exit
        location:
          row: 2
          column: 0
        end_location:
          row: 2
          column: 4
  parent: ~

