crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR1722_sys_exit_alias_8.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
sys_exit_alias_8.py:5:5: PLR1722 [*] Use `sys.exit()` instead of `exit`
  |
5 | def main():
6 |     exit(0)
  |     ^^^^ PLR1722
  |
  = help: Replace `exit` with `sys.exit()`

ℹ Suggested fix
1   |-from sys import argv
  1 |+from sys import argv, exit
2 2 | 
3 3 | 
4 4 | def main():


