crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR1722_sys_exit_alias_9.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
sys_exit_alias_9.py:2:5: PLR1722 [*] Use `sys.exit()` instead of `exit`
  |
2 | def main():
3 |     exit(0)
  |     ^^^^ PLR1722
  |
  = help: Replace `exit` with `sys.exit()`

ℹ Suggested fix
  1 |+import sys
1 2 | def main():
2   |-    exit(0)
  3 |+    sys.exit(0)
3 4 | 
4 5 | 
5 6 | from sys import argv


