crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR2004_magic_value_comparison.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    name: MagicValueComparison
    body: "Magic value used in comparison, consider replacing 10 with a constant variable"
    commit: ~
    fixable: false
  location:
    row: 5
    column: 3
  end_location:
    row: 5
    column: 5
  fix: ~
  parent: ~
- kind:
    name: MagicValueComparison
    body: "Magic value used in comparison, consider replacing 2 with a constant variable"
    commit: ~
    fixable: false
  location:
    row: 38
    column: 11
  end_location:
    row: 38
    column: 12
  fix: ~
  parent: ~
- kind:
    name: MagicValueComparison
    body: "Magic value used in comparison, consider replacing -2 with a constant variable"
    commit: ~
    fixable: false
  location:
    row: 41
    column: 11
  end_location:
    row: 41
    column: 13
  fix: ~
  parent: ~
- kind:
    name: MagicValueComparison
    body: "Magic value used in comparison, consider replacing +2 with a constant variable"
    commit: ~
    fixable: false
  location:
    row: 44
    column: 11
  end_location:
    row: 44
    column: 13
  fix: ~
  parent: ~
- kind:
    name: MagicValueComparison
    body: "Magic value used in comparison, consider replacing 3.141592653589793 with a constant variable"
    commit: ~
    fixable: false
  location:
    row: 65
    column: 20
  end_location:
    row: 65
    column: 40
  fix: ~
  parent: ~

